cabinet: assets: Prevent scrollbar from adding up to page width

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,6 +6,7 @@ html {
   word-wrap: break-word;
   max-width: 1250px;
   margin: auto;
+  overflow-y: scroll;
 }
 
 body {
